# simple-newsletter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: health.rs
