[package]
name = "simple-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "simple-newsletter"


[dependencies]
actix-web = "4.7.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.4"
